<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cadastro_entrada_saida"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/tv_tipo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_deb_cred"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/sp_tipo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/tipo"
            android:padding="16dp" />

        <TextView
            android:id="@+id/tv_detalhe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="16dp"
            android:text="@string/tv_detalhe"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/sp_detalhe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/detalhe"
            android:padding="16dp" />

        <EditText
            android:id="@+id/tv_valor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/digite_o_valor"
            android:inputType=""
            android:padding="16dp"
            tools:ignore="VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/editTextDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:focusable="false"
            android:hint="@string/et_date"
            android:inputType="none"
            android:minHeight="48dp"
            android:textColorHint="#546E7A"
            tools:ignore="TextFields,VisualLintTextFieldSize" />

        <Button
            android:id="@+id/bt_Lancar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/bt_lancar"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/buttonVerLancamentos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/bt_consultar"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/buttonSaldo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/bt_saldo"
            tools:ignore="VisualLintButtonSize" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>